tests/src/frontend/typechecking/invalid/inherit_const.sk
fun main(): void {
  void
}

base class X {
  const c: Bool;
}

class Y() extends X {}
